--- a/apps/frontend-public/src/index.html
+++ b/apps/frontend-public/src/index.html
@@ -13,6 +13,8 @@
 
     <!-- Load environment variables -->
     <script src="env.js"></script>
+
+    <!-- PWA -->
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#1976d2">
   </head>
